# rpg-mt

./: .env  .gitignore  AGENT.md  CODEX_WORKSPACE.md  README.md  pyproject.toml  pyrightconfig.json  setup.py  setup_prod.py
app/ai_models/chat/: __init__.py
app/ai_models/embeddings/: __init__.py  bge.py
app/configs/: __init__.py  embedding.py
app/modules/: main.py  setup_fastapi.py  static_service.py
app/modules/chat/: common.py  router.py  summary.py  tools.py  writer.py
app/modules/common/: router.py
app/modules/embedding/: router.py
app/modules/vector_db/: collection_service.py  router.py  router_summary.py  summary_repo.py
app/schema/: api.py  base.py  chat.py  message.py  models_enum.py  qa.py  summary.py  vector_db.py
app/utils/: common.py  logger.py  notify.py
app/vector_db/: weaviate_client.py
web_ui/: index.html
web_ui/assets/: CodeBlockNode-GO6lvFJf.js  CodeBlockNode-csnZbzaj.js  IndexView-1IGoiYlm.js  IndexView-B1r9yeWT.css  IndexView-BAMgbHt0.js  IndexView-BBs-WAiQ.js  IndexView-BC1EmBiA.js  IndexView-BYlP0zEJ.js  IndexView-BahjNRZY.css  IndexView-BtO77g69.js  IndexView-C-JTPKR7.js  IndexView-C-j4SJz-.js  IndexView-C8_FNCo_.js  IndexView-CImsDnfU.css  IndexView-COd9CKIj.css  IndexView-CXxyaLXG.js  IndexView-D-C7tXrs.js  IndexView-D7KcD6jl.js  IndexView-D9BWE6GF.js  IndexView-DNQpHQUh.js  IndexView-D_PL7aue.js  IndexView-DqZW7R7F.css  IndexView-M-3d9ZD0.css  IndexView-kRQMcCU-.css  IndexView-p9Hu-MF8.js  IndexView-pbVThWgu.css  IndexView-qbLIFgH5.css  IndexView-wbjdQ_ZO.js  __vite-optional-peer-dep_katex_markstream-vue_false-D5LAkEfu.js  __vite-optional-peer-dep_stream-markdown_markstream-vue_false-BojRNRsE.js  __vite-optional-peer-dep_stream-monaco_markstream-vue_false-DoSvhc5U.js  __vite-optional-peer-dep_vue-i18n_markstream-vue_false-BB51-bYG.js  d2_markstream-vue_false-DAdk4EzK.js  index--1ws1VME.js  index-07x0-uQV.js  index-0i7Oeywh.js  index-0xCEM6LG.js  index-1FQqD0Rt.js  index-1YTITkJ6.js  index-1dhwUGyv.js  (+296 more)
