[project]
name = "rpg-mt"
version = "0.1.0"
description = "rpg-mt"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "google-genai>=1.38.0",
    "httpx>=0.28.1",
    "langchain>=1.0.4",
    "langchain-google-genai>=3.0.1",
    "langchain-huggingface>=1.0.1",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
    "sentence-transformers>=5.1.0",
    "sse-starlette>=3.0.2",
    "weaviate-client>=4.16.7",
]

[[tool.uv.index]]
name = "tuna"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[dependency-groups]
dev = []
