[project]
name = "rpg-mt"
version = "0.1.0"
description = "rpg-mt"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "httpx>=0.28.1",
    "langchain>=1.2.12",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.1.1",
    "langgraph>=1.0.2",
    "sentence-transformers>=5.1.0",
    "sse-starlette>=3.0.2",
    "weaviate-client>=4.18.3",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31,<2.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.26,<1.0",
    "ruff>=0.11,<1.0",
]

[[tool.uv.index]]
name = "tuna"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true
